--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ name: Jobs
 on: [push]
 
 env:
+  RUSTUP_DIST_SERVER: https://static.rust-lang.org
+  RUSTUP_UPDATE_ROOT: https://static.rust-lang.org/rustup
+  CARGO_NET_RETRY: 10
   CARGO_TERM_COLOR: always
   rust_toolchain: nightly
 
